--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-static-site:latest .
+      run: docker build -t my-static-site:latest .
 
     - name: Push the Docker image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/my-static-site:latest
