--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         ls -la
         echo "Checking core files exist..."
         [ -f index.html ] && echo "index.html exists" || exit 1
-        [ -f style.css ] && echo "style.css exists" || exit 1
+        [ -f styles.css ] && echo "style.css exists" || exit 1
         [ -f script.js ] && echo "script.js exists" || exit 1
 
   deploy:
