--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -3,33 +3,32 @@ name: Frontend Deployment
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    permissions:
+      contents: write  # This is crucial for GitHub Pages deployment
+      pages: write
+      id-token: write
     
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      
     - name: Verify files
       run: |
-        ls -la
-        echo "Checking core files exist..."
         [ -f index.html ] && echo "index.html exists" || exit 1
         [ -f styles.css ] && echo "style.css exists" || exit 1
         [ -f script.js ] && echo "script.js exists" || exit 1
-
-  deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+        
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+      
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+        path: ./
+        
+    - name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v2
