--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,8 +19,8 @@ jobs:
       with:
         node-version: 18
 
-    - name: Install dependencies
-      run: npm install
+    - name: Install ESLint globally
+      run: npm install -g eslint
 
     - name: Run ESLint
       run: npx eslint script.js
